@@ -1,5 +1,16 @@
 1998-08-27  Tanaka Akira      <akr@jaist.ac.jp>
 
+	* ew-dec.el (ew-decode-field-test): Support
+	`ew-permit-null-encoded-text'.
+
+	* ew-unit.el (ew-decode-eword): Check
+	`ew-permit-null-encoded-text'.
+
+	* ew-var.el (ew-encoded-text-regexp): Always permit null string
+	regardless of `ew-permit-null-encoded-text'.
+
+1998-08-27  Tanaka Akira      <akr@jaist.ac.jp>
+
 	* ew-var.el (ew-decode-field-syntax-alist): Add few fields.
 
 	* eword-decode.el (eword-decode-header): Compare decoded result
